# fpath

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  benchmarks.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
benchmarks/: bench.sh  benchmarks.py
fpath/: __init__.py
src/: lib.rs  py2str.rs  utils.rs
tests/: test_genericpath.py  test_posixpath.py
