[project]
name = "fpath"
description = "Fast Path manipulation module written in Rust"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hideo Hattori", email = "hhatto.jp@gmail.com"},
]
requires-python = ">=3.6"
keywords = ["path", "rust"]
classifier = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "maturin==1.3.1"
]


[project.urls]
homepage = "https://github.com/hhatto/fpath"
repository = "https://github.com/hhatto/fpath"

[build-system]
requires = ["maturin==1.3.1"]
build-backend = "maturin"

[tool.maturin]
module-name = "fpath._fpath"
include = [
    { path = "Cargo.lock", format = "sdist" }
]
exclude = [".github/**"]
locked = true
